Add remaining account UI classes